--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,418 @@
     />
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/index.css"
     />
   </head>
-
   <body>
-    <h1>Catalog</h1>
+    <header class="header">
+      <div class="header__logo">
+        <a
+          href="#"
+          class="header__logo-link"
+        >
+          <img
+            src="images/logo.png"
+            alt="logo"
+            class="header__logo-img"
+          />
+        </a>
+      </div>
+
+      <nav class="nav">
+        <ul class="nav__list">
+          <li>
+            <a
+              href="/apple"
+              class="nav__link is-active"
+            >
+              apple
+            </a>
+          </li>
+          <li>
+            <a
+              href="/samsung"
+              class="nav__link"
+            >
+              samsung
+            </a>
+          </li>
+          <li>
+            <a
+              href="/smartphones"
+              class="nav__link"
+            >
+              smartphones
+            </a>
+          </li>
+          <li>
+            <a
+              href="/laptops"
+              class="nav__link"
+              data-qa="nav-hover"
+            >
+              laptops & computers
+            </a>
+          </li>
+          <li>
+            <a
+              href="/gadgets"
+              class="nav__link"
+            >
+              gadgets
+            </a>
+          </li>
+          <li>
+            <a
+              href="/tablets"
+              class="nav__link"
+            >
+              tablets
+            </a>
+          </li>
+          <li>
+            <a
+              href="/photo"
+              class="nav__link"
+            >
+              photo
+            </a>
+          </li>
+          <li>
+            <a
+              href="/video"
+              class="nav__link"
+            >
+              video
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="catalog">
+      <div
+        class="card"
+        data-qa="card"
+      >
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="./images/imac.jpeg"
+          alt="imac"
+          class="card__image"
+        />
+        <div class="card__content">
+          <h1 class="card__title">
+            APPLE A1419 iMac 27" Retina
+            <br />
+            5K Monoblock (MNED2UA/A)
+          </h1>
+          <h2 class="card__subtitle">Product code: 195434</h2>
+
+          <div class="card__stars-reviews">
+            <div class="stars">
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+              <div class="stars__star"></div>
+            </div>
+            <div class="reviews">Reviews: 5</div>
+          </div>
+
+          <div class="card__price-block">
+            <h2 class="card__price">Price:</h2>
+            <div class="card__price-value">$2,199</div>
+          </div>
+
+          <a
+            href="#"
+            class="buy-btn"
+            data-qa="card-hover"
+          >
+            <span class="buy-btn__link">Buy</span>
+          </a>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
